--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "MyNodeApp",
+  "name": "TheBakersTreat",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "author": "Swapnil Nakhate",
